package controller;

public enum CaseState {
    DEFAULT,
    SELECTED,
    POSSIBLE,

}
