package controller;

public class ChessMain {
    /**
     * Main method.
     */
    public static void main(String[] args) {
        Party party = new Party();
    }
}
