package model;

public enum Color {

    BLACK,
    WHITE,
    NONE,

}
