
@startuml chess
' https://plantuml.com/class-diagram

skinparam style strictuml
skinparam ClassAttributeIconSize 0
skinparam ClassFontStyle bold

package "model" {
    enum Color {
        WHITE
        BLACK
    }

    class Position {
        - x: Integer {readOnly}
        - y: Integer {readOnly}
        + Position(x: Integer, y: Integer)
        + getPosition() : Integer[]
        + getRow() : Integer
        + getColumn() : Integer
        + getPiece() : Piece
        + setPiece(piece : Piece)
    }
    Position  --* "1" Piece : <<contains>> piece

    class Chessboard {
        + Chessboard()
        + addCapturedPiece( piece : Piece)
        + getBoard() : Position[]
        + getMovements((position : Position) : Position[]
        + movePiece( from : Position, to : Position)
   }
    Chessboard *-- "64..64" Position : <<contains>> board
    Chessboard *-- "0..22" Piece : <<contains>> capturedPiece
    Chessboard o- "0..*" MoveObserver : <<observe>> moveObservers

    package "piece" {
        class Piece {
            + Piece()
            + getColor() : Color
            + getPoints() : Integer
            + getLetter() : String
            + getMovements(x : Integer, y : Integer) : Integer[]
            + setStrategy
        }
        Piece *-- "1" Color : <<contains>> color

        interface PieceStrategy <<interface>> {
            + getPoints() : Integer
            + getLetter() : String
            + getMovements(x : Integer, y : Integer) : Integer[]
        }

        class KingStrategy implements PieceStrategy{
            + getPoints() : Integer
            + getLetter() : String
            + getMovements(x : Integer, y : Integer) : Integer[]
        }

        class QueenStrategy implements PieceStrategy{
            + getPoints() : Integer
            + getLetter() : String
            + getMovements(x : Integer, y : Integer) : Integer[]
        }

        class RookStrategy implements PieceStrategy {
            + getPoints() : Integer
            + getLetter() : String
            + getMovements(x : Integer, y : Integer) : Integer[]
        }

        class BishopStrategy implements PieceStrategy{
            + getPoints() : Integer
            + getLetter() : String
            + getMovements(x : Integer, y : Integer) : Integer[]
        }

        class KnightStrategy implements PieceStrategy {
            + getPoints() : Integer
            + getLetter() : String
            + getMovements(x : Integer, y : Integer) : Integer[]
        }

        class PawnStrategy implements PieceStrategy{
            + getPoints() : Integer
            + getLetter() : String
            + getMovements(x : Integer, y : Integer) : Integer[]
        }

        class FactoryStrategy {
            + createKingStrategy(color: Color) : Piece
            + createQueenStrategy(color: Color) : Piece
            + createRookStrategy(color: Color) : Piece
            + createBishopStrategy(color: Color) : Piece
            + createKnightStrategy(color: Color) : Piece
            + createPawnStrategy(color: Color) : Piece
        }

        KingStrategy <.. FactoryStrategy : <<use>>
        QueenStrategy <.. FactoryStrategy : <<use>>
        RookStrategy <.. FactoryStrategy : <<use>>
        BishopStrategy <.. FactoryStrategy : <<use>>
        KnightStrategy <.. FactoryStrategy : <<use>>
        PawnStrategy <.. FactoryStrategy : <<use>>

        FactoryStrategy .> Piece : <<create>>
    }

    interface MoveObserver <<interface>> {
         + beforeMove(oldPosition : Position, newPosition : Position)
         + afterMove(oldPosition : Position, newPosition : Position)
    }

    Chessboard ..> FactoryStrategy : <<use>>

    class CaptureObserver implements MoveObserver{
            + beforeMove(oldPosition : Position, newPosition : Position)
            + afterMove(oldP osition : Position, newPosition : Position)
    }
    CaptureObserver --* Chessboard : <<contains>>

}


package "view" {
    class ChessboardView extends JFrame {
        + ChessboardView(party : Party)
        + getCase(position : Position) : Case
        + resetAllBackground()
    }
    ChessboardView ..> Party : <<use>> party
    class Case extends javax.swing.JLabel {
        - defaultColor : Color {readOnly}
        - x: Integer {readOnly}
        - y: Integer {readOnly}
        +Case(party : Party, x : Integer, y : Integer)
        +setPiece(piecePath : String)
        +set(state : CaseState)
        +isEmpty() : Boolean
        +empty()
    }
    Case --* Party : <<use>> party

   class MovementViewObserver implements MoveObserver{
        +MovementViewObserver (chessboardView : ChessboardView)
        + beforeMove(oldPosition : Position, newPosition : Position)
        + afterMove(oldPosition : Position, newPosition : Position)
   }
   MovementViewObserver --* ChessboardView : <<use>> chessboardView


}

package "controller" {

    enum CaseState {
        DEFAULT
        SELECTED
        POSSIBLE
    }
    class ChessMain() {
        + {static} main()
    }

    class Party {
        + Party()
        + getCurrentPlayer() : Color
        + ClikOnCase(x : Integer, y : Integer)
        - selectPosition(position : Position) : Boolean
        - movePiece(oldPosition : Position, newPosition : Position) : Boolean
        - changePlayer()

    }

    Party --* "1" Chessboard: <<contains>> chessboard
    Party --* ChessboardView: <<use>> 
    Party --* "1" Color: <<contains>> currentColor
    Party --* Position: <<use>> previous Position
}


@enduml
